public/style.css
* {
  padding: 0;
  margin: 0;
  font-family: Avenir Next, sans-serif;
}

:root {
  --primary-color: #2dd4bf;
  --primary-text: #ffffff;
  --secondary-color: linear-gradient(22deg, #06b6d4, #0369a1);
  --text-main: #0f172a;
  --text-accent: var(--text-main);
  --text-btn: var(--primary-color);
  --text-btn-full: #ffffff;
  --bg-main: #f8fafc;
  --bg-accent: #e2e8f0;
  --bg-btn: #ffffff;
  --bg-btn-full: linear-gradient(22deg, #06b6d4, #0369a1);
}

@media (prefers-color-scheme: dark) {
  :root {
    --primary-color: #0369a1;
    --text-main: #ffffff;
    --text-accent: #e2e8f0;
    --bg-main: #334155;
    --bg-accent: #64748b;
  }
}

body {
  color: var(--text-main);
  background-color: var(--bg-main);
}

.topbar {
  color: #ffffff;
  background-image: var(--secondary-color);
  padding: 24px 64px;
}
.topbar > h1 {
  font-size: 16px;
}

header {
  color: var(--primary-text);
  background-color: var(--primary-color);
  padding: 64px;
}

.section {
  padding: 64px;
}

/*****************************************/

button {
  color: var(--text-btn);
  background-color: var(--bg-btn);
  padding: 8px;
  height: 64px;
  min-width: 192px;
  border-radius: 12px;
  border: none;
  outline: none;
}

.btn-full {
  color: var(--text-btn-full);
  background-image: var(--bg-btn-full);
}

.btn-discord {
  color: #ffffff;
  background-color: #6366f1;
  font-weight: 600;
}

button > a {
  font-size: 32px;
  color: var(--text-btn);
  text-decoration: none;
}
.btn-full > a {
  color: var(--text-btn-full);
}
.btn-discord > a {
  color: #ffffff;
}

/*****************************************/

img {
  border-radius: 12px;
}

.logo {
  border-radius: 16px;
}

.main-logo {
  border-radius: 32px;
  margin: -16px;
  height: 16px;
}

/*****************************************/

.notice {
  color: #ffffff;
  background-color: #0284c7;
  padding: 32px;
  outline: solid 8px #0284c7aa;
  border-radius: 32px;
  display: flex;
  flex-direction: column;
}
.notice .close {
  background-color: #334155cc;
  height: 32px;
  width: 32px;
  padding: 8px;
  outline: solid 8px #334155aa;
  border-radius: 50%;
}

@media only screen and (max-width: 640px) {
  header, .section {
    padding: 32px;
  }
  .topbar {
    padding: 24px 32px;
  }
  
  img {
    border-radius: 4px;
    width: 100%;
  }
  .logo {
    border-radius: 8px;
    width: 192px;
    height: 192px;
  }

  .main-logo {
    border-radius: 8px;
    height: 16px;
  }

  .close {
    height: 24px;
    width: 24px;
  }

  button {
    width: 100%;
    border-radius: 8px;
    height: 48px;
    margin-top: 8px;
  }
  button > a {
    font-size: 16px;
  }
 
  @media (orientation: portrait) or (max-width: 360px) {
    .logo, .main-logo {
       width: 100%;
       height: auto;
    }
  }
}

